kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: aks-hello-world-app
          image: paulbouwer/hello-kubernetes:1.8
          ports:
            - containerPort: 8080
