kubernetes/ingress-controller.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: mytask
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: hello-world-service
    servicePort: 80
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: 80
        path: /(.*)
